# nous-runtime

./: .env.example  .gitignore  API_COMPATIBILITY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  MANIFEST.in  NOTICE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SUPPORT.md  config.example.json  deploy.sh  docker-compose.yml  install.sh  pyproject.toml
.github/: DISCUSSION_GUIDELINES.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
deploy/: nousd.service
deploy/brew/: nous-runtime.rb
deploy/docker/: docker-compose.yml
deploy/windows/: install.ps1
desktop/: README.md  index.html  package.json  vite.config.ts
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: FAQ.md  MIGRATION_GUIDE.md
docs/architecture/: README.md
docs/deployment/: README.md
docs/design/: EXECUTION_APPROVAL_EXPERIENCE.md  PRODUCT_IDENTITY.md  TUI_DESIGN_LANGUAGE.md  VOICE_AND_TONE.md
docs/developer/: README.md
docs/getting-started/: INSTALLATION.md  QUICK_START.md  README.md
docs/guides/: README.md
docs/release/: ALPHA_SCOPE.md  ANNOUNCEMENT_DRAFT.md  EXPLICIT_COMMIT_GROUPS.md  FINAL_RELEASE_CANDIDATE_REPORT.md  KNOWN_LIMITATIONS.md  PUBLIC_RELEASE_CHECKLIST.md  PUBLIC_SOURCE_MANIFEST.md  TERMINAL_DEMO_PLAN.md  V0.1.0_ALPHA_RELEASE_NOTES.md  WEBSITE_LAUNCH_PLAN.md
docs/review/: PRODUCT_IDENTITY_CHANGELOG.md
docs/rfcs/: 0000-template.md
docs/security/: README.md
docs/specs/: CONNECTOR_SPEC.md  NODE_SPEC.md  PLUGIN_SPEC.md  PROVIDER_SPEC.md  RUNTIME_SPEC.md  WORKFLOW_SPEC.md
docs/standards/: README.md
examples/: README.md  demo_edge_device.py  demo_quick_capture.py
examples/hello_connector/: README.md  connector.json  run_example.py
examples/hello_plugin/: README.md  capabilities.json  plugin.json  plugin_impl.py
examples/hello_provider/: README.md  hello_provider.py
examples/hello_runtime/: README.md
examples/hello_workflow/: README.md
examples/sdk/: python_quickstart.py  typescript_quickstart.ts
hello_pack/: README.md  pack.yaml
nous_runtime/: __init__.py  __main__.py  errors.py  locking.py  recovery_runtime.py  sqlite_runtime.py  version.py
scripts/: benchmark_scheduler.py  healthcheck.sh  nous-doctor.sh  security_scan.py  smoke_test_clean_install.py  validate_clean_install.ps1  validate_clean_install.sh
tests/: __init__.py  conftest.py  reference_pareto.py  test_agent_adapters.py  test_agent_contract.py  test_agent_runtime.py  test_approval_broker.py  test_capability_availability.py  test_capability_manifest.py  test_chat_runtime.py  test_cli_entry.py  test_code_assistant.py  test_connector_runtime.py  test_conversation_runtime.py  test_decision_lifecycle_store.py  test_developer_runtime.py  test_events_runtime.py  test_extension_examples.py  test_inspector.py  test_installer.py  test_knowledge_library.py  test_local_memory.py  test_local_retrieval_backend.py  test_memory_engine.py  test_multi_agent_runtime.py  test_observation.py  test_open_source_hygiene.py  test_p5_7_2_execution_closure.py  test_pareto_correctness.py  test_performance_runtime.py  test_phase7_production.py  test_phase8_runtime_closure.py  test_plugin_runtime.py  test_product_runtime_integration.py  test_profiles.py  test_project_scan.py  test_project_workspace.py  test_provider_reliability_integration.py  test_rc_security_hardening.py  test_recovery_runtime.py  (+22 more)
(+558 files in other folders)
