[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nous-runtime"
version = "0.1.0a0"
description = "Long-lived intelligent runtime for understanding, creating, and operating complex systems."
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Mao Yi"}
]
keywords = ["ai", "runtime", "llm", "agent", "iot", "edge", "capability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
all = [
    "chromadb>=0.4",
    "fastembed>=0.2",
    "faster-whisper>=1.0",
    "edge-tts>=6.1",
    "pymupdf>=1.23",
    "pytesseract>=0.3",
    "Pillow>=10.0",
    "PyPDF2>=3.0",
    "pdfplumber>=0.10",
    "python-docx>=1.0",
    "onnxruntime>=1.16",
]
ui = [
    "rich>=13.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "ruff>=0.1",
]

[project.scripts]
nous = "nous_runtime.cli.main:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "nous_runtime*",
    "remote_terminal.nous_core*"
]

[tool.setuptools.package-data]
"remote_terminal.nous_core" = ["migrations/*.sql"]

[tool.pytest.ini_options]
markers = [
    "unit: fast deterministic unit tests",
    "integration: cross-module integration tests",
    "runtime: runtime pipeline and CLI tests",
    "security: governance and security tests",
    "release: release-gate tests",
]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    # Third-party: chromadb triggers asyncio.iscoroutinefunction deprecation (Python 3.14+)
    # upstream ref: chromadb.telemetry.opentelemetry.__init__ uses asyncio.iscoroutinefunction
    # Remove when chromadb upstream fixes the issue.
    "ignore:'asyncio.iscoroutinefunction' is deprecated and slated for removal:DeprecationWarning",
    # Treat project-origin warnings as errors (equivalent to -W error but scoped)
    "error:::nous_runtime.*",
]

[tool.ruff]
extend-exclude = ["remote_terminal/*.py"]

[tool.ruff.lint.per-file-ignores]
# The unsupported top-level Remote Terminal application is excluded from the
# v0.1.0-alpha source and wheel candidates. Compatibility contracts live in
# the separately packaged remote_terminal.nous_core namespace.
"remote_terminal/**/*.py" = ["E402", "E701", "E702", "E741", "F401", "F601", "F821", "F841"]
