[package]
name = "nous-control-center"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "http-request",
    "shell-open",
    "fs-read-file",
    "fs-write-file",
    "path-all",
    "system-tray",
    "notification-all",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
